...
    <string name="reg_login_example">example@gmail.com</string>
    <string name="reg_password_text">Пароль</string>
    <string name="check_account">Найти аккаунт</string>
    <string name="reg_password_rep_text">Повторите пароль</string>
    <string name="secret_word_text">Выберите секретное слово для восстаноления пароля</string>
    <string name="secret_word_hint">Секретное слово</string>
    <string name="wrong_password">Неправильный пароль</string>
    <string name="no_such_user">Несуществующий пользователь</string>
    <string name="wrong_login_format">Недопустимый логин!</string>
    <string name="your_secret_type">Ваш тип секретного слова</string>
    <string name="your_secret_type_placeholder">Ваш тип секретного слова - %1$s</string>
    <string name="user_exists">Пользователь с таким логином уже существует!</string>
    <string name="different_passwords">Пароли должны совпадать!</string>
    <string name="uk_flag_description">UK flag</string>
...
