<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/menu_background"
    android:contentDescription="@string/app_name"
    tools:context=".MainMenu">
    <!--tools:openDrawer="start"-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/menu_image"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="main_menu"
                android:onClick="onMenuImageClick"
                app:srcCompat="@drawable/ic_menu"
                app:tint="#637D95" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingEnd="25dp"
                android:text="@string/education_icon_text"
                android:textSize="34sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/main_menu_welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/welcome_text"
            android:textSize="24sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/theory_card"
                    android:layout_width="140dp"
                    android:layout_height="120dp"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:onClick="onTheoryCardClicked"
                    android:outlineSpotShadowColor="@android:color/black"
                    app:cardCornerRadius="10dp">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        app:srcCompat="@drawable/study_hat" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center_horizontal"
                        android:layout_marginBottom="10dp"
                        android:text="@string/theory" />
                </androidx.cardview.widget.CardView>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/insert_words_card"
                    android:layout_width="140dp"
                    android:layout_height="120dp"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:onClick="onInsertWordsCardsClicked"
                    app:cardCornerRadius="10dp">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        app:srcCompat="@drawable/task_list" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center_horizontal"
                        android:layout_marginBottom="10dp"
                        android:text="@string/insert_words" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/reading_card"
                    android:layout_width="140dp"
                    android:layout_height="120dp"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:onClick="onReadingCardClicked"
                    app:cardCornerRadius="10dp">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        app:srcCompat="@drawable/book" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center_horizontal"
                        android:layout_marginBottom="10dp"
                        android:text="@string/reading" />
                </androidx.cardview.widget.CardView>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/audio_card"
                    android:layout_width="140dp"
                    android:layout_height="120dp"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:onClick="onAudioCardClicked"
                    app:cardCornerRadius="10dp">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        app:srcCompat="@drawable/music_disk" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center_horizontal"
                        android:layout_marginBottom="10dp"
                        android:text="@string/audio" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:srcCompat="@drawable/main_menu_gradient" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/london" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="bottom"
                app:srcCompat="@drawable/reverse_main_menu_gradient" />
        </LinearLayout>

    </LinearLayout>

    <include
        android:id="@+id/navigation"
        layout="@layout/common_navigation" />

</androidx.drawerlayout.widget.DrawerLayout>