<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="Активность">
        <menu>
            <item android:title="@string/education_icon_text" android:id="@+id/education" android:icon="@drawable/ic_study" />
            <item android:title="@string/memoring_icon_text" android:id="@+id/memorising" android:icon="@drawable/ic_calendar" />
            <item android:title="@string/translator_icon_text" android:id="@+id/translator" android:icon="@drawable/ic_translate" />
            <item android:title="@string/statistics_icon_text" android:id="@+id/statistics" android:icon="@drawable/ic_stats" />
        </menu>
    </item>
</menu>