<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chooseTaskLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/menu_background"
    tools:context=".ChooseTask">

    <LinearLayout
        android:id="@+id/chooseTaskLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/chooseTaskTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/choose_task"
            android:textSize="24sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/optionsRecycle"
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:layout_marginTop="20dp"
            android:fadeScrollbars="false"
            android:scrollbars="vertical"
            tools:listitem="@layout/task_item" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/memoProgress"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</FrameLayout>